Update menu icon display property to ensure visibility on hover

--- a/template/Portfolio/style.css
+++ b/template/Portfolio/style.css
@@ -466,7 +466,7 @@ social-media a:hover {
     .menu-icon .bar,
     .menu-icon::after,
     .menu-icon::before {
-        display: none;
+        display: block;
     }
 
     ul.navlist {
